hphp/hack/test/typecheck/reserved_name8.php.exp
File "reserved_name8.php", line 5, characters 7-10:
Bool cannot be used as it is reserved. (Naming[2068])
