hphp/hack/test/typecheck/reserved_name8.php
<?hh

namespace Foo;

class Bool {}
